k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: java-api-kavindu
  labels:
    name: java-api-kavindu
    environment: production
