k8s/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-api-service
  namespace: java-api-kavindu
  labels:
    app: java-api-kavindu
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: java-api-kavindu
